Revision history for Cassandra-Client

0.08    unreleased

      * Change event loop implementation to EV
      * Redesign wait_for_schema_agreement, to actually wait for the schema agreement
      * Initial support for proper retry settings

0.07    2016/10/10

      * Experimental support for client-side throttling
      * No more Perl 5.8 support -- 5.10 is now required
      * Addresses an error that can occur when a query is retried against a node that doesn't know that query
      * Fix a rare issue causing random "Request timed out" when utf8-flagged data is passed to non-utf8 types (ascii, blob)

0.06    2016/09/26

      * Hopefully fixes support for Perl 5.8
      * Addresses a documentation hole about the 'timestamp' type
      * Support for the 'varint' type
      * Support for the 'decimal' type
      * Addresses an issue that occurred when both the AnyEvent and synchronous options were used
      * Some refactoring to allow for future changes

0.05    2016/09/06

      * Updates Makefile.PL to list the correct requirements

0.04    2016/09/05

      * First version, released on an unsuspecting world.
